To google Sheets API

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 python-telegram-bot[ext]
-SQLAlchemy
 requests
 httpx
 python-dotenv
+gspread
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
